<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuRestorePasswords"
        android:icon="@drawable/ic_restore"
        android:orderInCategory="0"
        android:title="@string/menu_restore_passwords"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuDeletePermanently"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="1"
        android:title="@string/delete_permanently"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuToggleDeletedLock"
        android:icon="@drawable/ic_padlock"
        android:orderInCategory="2"
        android:title="@string/lock_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuToggleDeletedVisibility"

        android:icon="@drawable/ic_password_visibility"
        android:orderInCategory="3"
        android:title="@string/show_passwords"
        android:visible="false"
        app:showAsAction="" />

</menu>