<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imgEditSiteIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="TESTAR COM O TEXTINPUT LAYOUT"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPasswordName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_site_name"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_new_password"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPasswordPsswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_new_password"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_site_link"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPasswordLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_site_link"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabConfirmEdit"
        style="@style/FloatingActionButton"
        android:layout_gravity="center"
        android:src="@drawable/ic_check" />
</LinearLayout>